<resources>
    <string name="app_name">SensorDataVisualizer</string>
    <string name="title_activity_setting_sensor_data">Settings of Sensors</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_settings_title">Settings</string>
    <string name="preference_sensorType_default">SDS011</string>
    <string name="preference_sensorType_key">sensorTypeKey</string>
    <string name="preference_sensor_title">Sensor Type Selection</string>
    <string name="preference_sensorID_title">Sensor Id</string>
    <string name="preference_sensorID_key">SensorId</string>
    <string name="preference_sensorType_value" />
    <string-array name="preflist_sensorTypes_Entries">
        <item>Nova SDS Sensor</item>
        <item>DHT22 Temperature Sensor</item>
    </string-array>
    <string-array name="preflist_sensorTypes_Entries_Values">
        <item>SDS011</item>
        <item>DHT22</item>
    </string-array>
    <string name="pref_Sensor_category_title">Sensor Data Configuration</string>
    <string name="pref_luftdata_url_key">luftdatenInfoURL</string>
    <string name="pref_sync_frequency_key">pref_sync_frequency_key</string>
    <string name="pref_sync_frequency_title">Frequency to update storage</string>
    <string name="perf_luftdata_category_title">Configuration of Data Server</string>
</resources>
